Corrected layout issue with content subitems

--- a/index.css
+++ b/index.css
@@ -139,7 +139,8 @@ input[type="checkbox"]{
 input[type='checkbox']:checked ~ label span::before{
     transform: rotate(90deg);
 }
-li{
+.nav li{
+    position: relative;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -210,15 +211,30 @@ textarea{
 .main > *{
     position: relative;
 }
+.main ul{
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    list-style: none;
+    
+}
+.main ul label{
+    position: relative;
+    display: block;
+    line-height: 100%;
+    font-size: 100%;
+}
 .main input, .main textarea{
+    font-size: 100%;
+    outline: transparent;
+    border: none;
     opacity: 0;
     position: absolute;
     top: 0;
     transform: translateX(-50%);
-    width: 100%;
-    height: 100%;
-    min-width: fit-content;
     text-align: center;
+    z-index: 1;
 }
 .main input:focus, .main textarea:focus{
     opacity: 1;
